# IBY-assignment

./: .gitignore  AGENT_ARCHITECTURE.md  Data Science Report.md  README.md  main.py  pyproject.toml
finetune/: finetune.py  local_arxiv.jsonl
reports/: INTERACTION.md
utils/: agents.py  tools.py
