[tool.poetry]
name = "iby"
version = "0.1.0"
description = ""
authors = ["GeeteshPaidi <geeteshchandrapaidi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
transformers = ">=4.56.1,<5.0.0" # This was already here
torch = {version = "^2.8.0", source = "pytorch_cpu"}
torchvision = {version = "^0.23.0", source = "pytorch_cpu"}
torchaudio = {version = "^2.8.0", source = "pytorch_cpu"}
peft = "^0.17.1"
datasets = "^4.1.0"
semanticscholar = "^0.11.0"
arxiv = "^2.2.0"
accelerate = "^1.10.1"
bitsandbytes = "^0.47.0"
scikit-learn = "^1.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"